# project

./: README.md
C_scripts/: README.MD
C_scripts/RESTFulRequestor/: CMakeLists.txt  README.MD
C_scripts/RESTFulRequestor/libtest/: CMakeLists.txt  main.cpp
C_scripts/RESTFulRequestor/src/: AutoParser.cpp  AutoParser.h  CMakeLists.txt  RESTFulRequestor.cpp  RESTFulRequestor.h
C_scripts/SIFT/: README  main.cpp  sift.cpp  sift.h  sift.vcxproj
C_scripts/bootstrap-scheme/: README.md  bootstrap-scheme.sdf  bootstrap-scheme.sln
C_scripts/bootstrap-scheme/bootstrap-scheme/: bootstrap-scheme.vcxproj  bootstrap-scheme_vs120_Debug_Win32.lnt
C_scripts/bootstrap-scheme/bootstrap-scheme/Debug/: vc120.idb
C_scripts/bootstrap-scheme_simple/: bootstrap-scheme.vcxproj  main.c
C_scripts/tinyscheme/: README.md  scheme.h  scheme.sdf  scheme.sln  scheme.vcxproj  scheme.vcxproj.filters
code_tips/: README.MD  reviewY.rkt
java_scripts/PMiner/: .classpath  .project  README.md
java_scripts/PMiner/WebRoot/: admin.html  compare.html  edit.html  empty.html  index-search.html  index.html  log.html  login-error.jsp  login.jsp  multiple.jsp  profile-new.jsp  profile.jsp  province.jsp  register.jsp  search-result.jsp  unauthorized.html
java_scripts/PMiner/WebRoot/WEB-INF/: web.xml
java_scripts/PMiner/WebRoot/css/: buttons.css  docs.css  login.css  main.css
java_scripts/PMiner/src/: applicationContext.xml  beansContext.xml  config.properties  ehcache-shiro.xml  log4j.properties  struts.xml
python2_scripts/: README.MD
python2_scripts/calculateMD5/: calmd5.py
python2_scripts/knn/: KNN_WEB.py
python2_scripts/sourceforgeDownloader/: sourceforgeDownloader.py
python3_scripts/: README.MD
python3_scripts/FileSync/: FileMonitor.py  floderSync.py  pyqt5_test.py
python3_scripts/androidLockCrack/: crackPicLock.py  gesture.key
python3_scripts/base64_en/: encrypto_decrypto.py  tt_de.txt  tt_en.txt
python3_scripts/callLib/: lib_test.py
python3_scripts/getweb/: getLink2.py
python3_scripts/gitExplorer/: gitObject.py
rust_scripts/: README.MD
rust_scripts/dining_philosophers/: Cargo.toml
rust_scripts/dining_philosophers/src/: main.rs
rust_scripts/guessing_game/: Cargo.toml
rust_scripts/guessing_game/src/: main.rs
rust_scripts/hello_world/: hello_world.rs
rust_scripts/lib_test/: Cargo.toml
rust_scripts/lib_test/src/: lib.rs
shell/: test.sh
shell/installHadoopCluster/: ELK.sh  beatsfinal.conf  changeHostIP.sh  dic.sh  filebeat.yml  hadoop-install.sh  hbase-install.sh  hostIPinit.sh  install-all.sh  installHadoopCluster.sh  installHadoopClusterEng.sh  iplist.ini  my.cnf  mysql.sh  role.ini  run.sh  test.sh  zookeeper-install.sh
shell/installHadoopCluster/package/: beatsfinal.conf  filebeat.yml
(+46 files in other folders)
