# 设置测试工程名称
SET(TARGET_LABEL_PREFIX "Test ")

# 设置当前文件夹编译依赖文件
SET(LIBRESTFULREQUESTORTEST_SRC main.cpp)

# 使用上述设置的源文件构建应用程序：
ADD_EXECUTABLE(RESTFulRequestorTest ${LIBRESTFULREQUESTORTEST_SRC})

# 添加库的版本
SET_TARGET_PROPERTIES(RESTFulRequestorTest PROPERTIES VERSION 1.0 SOVERSION 1)

# 依赖于本工程自己的头文件路径
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
# 设置需要依赖的第三方库头文件路径：
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${LIBCURL_INCLUDE_PATH})
#INCLUDE_DIRECTORIES(${MUDUO_INCLUDE_PATH})

# 设置对当前工程文件生成库的依赖：直接使用其他子文件夹下ADD_LIBRARY中定义的文件
TARGET_LINK_LIBRARIES(RESTFulRequestorTest RESTFulRequestorlib)

# 设置需要的附加库文件：
TARGET_LINK_LIBRARIES(RESTFulRequestorTest ${LIB_CURL_PATH})

# 设置库编译安装的位置：
INSTALL(TARGETS RESTFulRequestorTest RUNTIME DESTINATION test)

