# 设置当前文件夹构建需要的源文件：
SET(LIBRESTFULREQUESTOR_SRC RESTFulRequestor.cpp)

# 使用上述设置的源文件构建动态链接库：
ADD_LIBRARY(RESTFulRequestor SHARED ${LIBRESTFULREQUESTOR_SRC})
# 使用上述设置的源文件，构建静态库文件：
ADD_LIBRARY(RESTFulRequestorlib STATIC ${LIBRESTFULREQUESTOR_SRC})

# 添加库的版本
SET_TARGET_PROPERTIES(RESTFulRequestor PROPERTIES VERSION 1.0 SOVERSION 1)

# 设置当前编译需要的自定义模块头文件：

# 设置需要依赖的第三方库头文件路径：
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${RAPIDJSON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${LIBCURL_INCLUDE_PATH})
# 设置需要的附加库文件：
TARGET_LINK_LIBRARIES(RESTFulRequestor ${LIB_CURL_PATH})

# 设置库编译安装的位置：
INSTALL(TARGETS RESTFulRequestor RUNTIME DESTINATION lib)
INSTALL(TARGETS RESTFulRequestorlib ARCHIVE DESTINATION libstatic)
INSTALL(FILES RESTFulRequestor.h DESTINATION include/RESTFulRequestor)
